examples/errors/i0502.sdm
module example <https://example.com/api> is

  structure Foo is
    bar -> unknown
  end

end
